--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,5 @@
     "tabWidth": 4,
     "useTabs": false,
     "semi": false,
-    "singleQuote": false,
-    "printWidth": 99
-  }
-  
+    "singleQuote": false
+}
