--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "nextjs-smartcontract-lottery-fcc",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "moralis": "^1.8.0",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-moralis": "^1.4.0",
-    "web3uikit": "^0.1.159"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "moralis": "1.11.0",
+        "next": "12.1.5",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-moralis": "1.4.0",
+        "web3uikit": "^0.1.159"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.14",
+        "eslint": "8.13.0",
+        "eslint-config-next": "12.1.5",
+        "install": "^0.13.0",
+        "postcss": "^8.4.23",
+        "prettier": "^2.8.7",
+        "tailwindcss": "^3.3.1"
+    }
 }
